--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-vector-icons/feather": "^4.29.2-alpha.32",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-font": "~12.0.9",
@@ -23,6 +24,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -37,6 +39,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.2.2",
     "typescript": "~5.3.3"
   },
   "private": true
